syntax = "proto3";

package malonaz.ai.ai_service.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "malonaz/ai/ai_service/v1/chat.proto";
import "malonaz/ai/ai_service/v1/model.proto";
import "malonaz/ai/ai_service/v1/speech_to_text.proto";
import "malonaz/ai/ai_service/v1/text_to_speech.proto";
import "malonaz/ai/ai_service/v1/text_to_text.proto";
import "malonaz/ai/ai_service/v1/voice.proto";
import "malonaz/ai/v1/chat.proto";
import "malonaz/ai/v1/model.proto";
import "malonaz/ai/v1/voice.proto";
import "malonaz/codegen/aip/v1/aip.proto";

option go_package = "github.com/malonaz/core/genproto/ai/ai_service/v1";

// This API represents an AI service.
//
// It handles TextToText, SpeechToText & TextToSpeech generation.
service AiService {
  option (google.api.default_host) = "ai.malonaz.com";

  // Create a model.
  //
  // See: https://google.aip.dev/131 (Standard methods: Create).
  rpc CreateModel(CreateModelRequest) returns (ai.v1.Model) {
    option (google.api.http) = {post: "/v1/{parent=providers/*}/models"};
    option (google.api.method_signature) = "parent,model";
  }

  // Get a model.
  //
  // See: https://google.aip.dev/131 (Standard methods: Get).
  rpc GetModel(GetModelRequest) returns (ai.v1.Model) {
    option (google.api.http) = {get: "/v1/{name=providers/*/models/*}"};
    option (google.api.method_signature) = "name";
  }

  // List models for a user.
  //
  // See: https://google.aip.dev/132 (Standard methods: List).
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse) {
    option (google.api.http) = {get: "/v1/{parent=providers/*}/models"};
    option (google.api.method_signature) = "parent";
  }

  // Create a voice.
  //
  // See: https://google.aip.dev/131 (Standard methods: Create).
  rpc CreateVoice(CreateVoiceRequest) returns (ai.v1.Voice) {
    option (google.api.http) = {post: "/v1/voices"};
    option (google.api.method_signature) = "voice";
  }

  // Get a voice.
  //
  // See: https://google.aip.dev/131 (Standard methods: Get).
  rpc GetVoice(GetVoiceRequest) returns (ai.v1.Voice) {
    option (google.api.http) = {get: "/v1/{name=voices/*}"};
    option (google.api.method_signature) = "name";
  }

  // List voices for a user.
  //
  // See: https://google.aip.dev/132 (Standard methods: List).
  rpc ListVoices(ListVoicesRequest) returns (ListVoicesResponse) {
    option (google.api.http) = {get: "/v1/voices"};
    option (google.api.method_signature) = "";
  }

  // Converts speech audio to text using the specified model.
  rpc SpeechToText(SpeechToTextRequest) returns (SpeechToTextResponse) {
    option (google.api.http) = {
      post: "/v1/{model=providers/*/models/*}/speech-to-text"
      body: "*"
    };
  }

  // Converts speech audio to text with streaming response.
  rpc SpeechToTextStream(stream SpeechToTextStreamRequest) returns (stream SpeechToTextStreamResponse) {
    option (google.api.http) = {
      post: "/v1/{model=providers/*/models/*}/speech-to-text:stream"
      body: "*"
    };
  }

  // Convert text to text using chat completion models.
  rpc TextToText(TextToTextRequest) returns (TextToTextResponse) {
    option (google.api.http) = {
      post: "/v1/{model=providers/*/models/*}/text-to-text"
      body: "*"
    };
  }

  // Converts text to text using chat completion models with streaming response.
  rpc TextToTextStream(TextToTextStreamRequest) returns (stream TextToTextStreamResponse) {
    option (google.api.http) = {
      post: "/v1/{model=providers/*/models/*}/text-to-text:stream"
      body: "*"
    };
  }

  // Converts text to speech audio, returning complete audio data.
  rpc TextToSpeech(TextToSpeechRequest) returns (TextToSpeechResponse) {
    option (google.api.http) = {
      post: "/v1/{model=providers/*/models/*}/text-to-speech"
      body: "*"
    };
  }

  // Converts text to speech audio with streaming response.
  rpc TextToSpeechStream(TextToSpeechStreamRequest) returns (stream TextToSpeechStreamResponse) {
    option (google.api.http) = {
      post: "/v1/{model=providers/*/models/*}/text-to-speech:stream"
      body: "*"
    };
  }

  // ===================== Chat Management =====================

  // Creates a new chat.
  rpc CreateChat(CreateChatRequest) returns (ai.v1.Chat) {
    option (google.api.http) = {
      post: "/v1/{parent=organizations/*/users/*}/chats"
      body: "chat"
    };
    option (google.api.method_signature) = "parent,chat";
    option (malonaz.codegen.aip.v1.standard_method).resource = "ai.malonaz.com/Chat";
  }

  // Gets a chat.
  rpc GetChat(GetChatRequest) returns (ai.v1.Chat) {
    option (google.api.http) = {get: "/v1/{name=organizations/*/users/*/chats/*}"};
    option (google.api.method_signature) = "name";
    option (malonaz.codegen.aip.v1.standard_method).resource = "ai.malonaz.com/Chat";
  }

  // Updates a chat.
  rpc UpdateChat(UpdateChatRequest) returns (ai.v1.Chat) {
    option (google.api.http) = {
      patch: "/v1/{chat.name=organizations/*/users/*/chats/*}"
      body: "chat"
    };
    option (google.api.method_signature) = "chat,update_mask";
    option (malonaz.codegen.aip.v1.standard_method).resource = "ai.malonaz.com/Chat";
  }

  // Deletes a chat (soft delete).
  rpc DeleteChat(DeleteChatRequest) returns (ai.v1.Chat) {
    option (google.api.http) = {delete: "/v1/{name=organizations/*/users/*/chats/*}"};
    option (google.api.method_signature) = "name";
    option (malonaz.codegen.aip.v1.standard_method).resource = "ai.malonaz.com/Chat";
  }

  // Lists chats for a user.
  rpc ListChats(ListChatsRequest) returns (ListChatsResponse) {
    option (google.api.http) = {get: "/v1/{parent=organizations/*/users/*}/chats"};
    option (google.api.method_signature) = "parent";
    option (malonaz.codegen.aip.v1.standard_method).resource = "ai.malonaz.com/Chat";
  }
}
